--- a/foundations/flex/01-flex-center/style.css
+++ b/foundations/flex/01-flex-center/style.css
@@ -3,7 +3,13 @@
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+   display: flex;
+    justify-content: center;
+  align-items: center;
+  
+ 
 }
+ 
 
 .box {
   background: palevioletred;
@@ -12,4 +18,8 @@
   border: 6px solid maroon;
   width: 80px;
   height: 80px;
+
+
+ 
+
 }
