--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,19 +1,29 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
-}
-
+  display: flex;
+  padding: 8px;
+  justify-content: space-between;
+  align-items: center;
+  
+       }
 .logo {
   font-size: 48px;
   font-weight: 900;
   color: tomato;
   background: white;
   padding: 4px 32px;
-}
+  
+    }
+  
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 8px;
 }
 
 a {
@@ -23,3 +33,4 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
