--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -24,3 +24,28 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.container {
+  display: flex;
+flex-direction: column;
+align-items: center;
+gap: 32px;
+
+ }
+
+ .info {
+display: flex;
+gap: 52px;
+
+ }
+
+ .discr {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 200px;
+ }
+
+ .text {
+  text-align: center;
+ }
