--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,18 +2,30 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  font-weight: 500;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+  padding: 16px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .sidebar {
@@ -26,4 +38,52 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+ min-height: 300Px;
+  width: 300px;
+  padding: 10PX;
+  margin: 0;
+  display: flex;
+ flex-grow: 0;
+ flex-shrink: 0;
+
+
+}
+
+.content {
+  display: flex;
+  flex: 1;
+
+}
+.sidebar {
+  min-width: 300px;
+  flex-shrink: 0;
+  flex-grow: 0;
+  padding: 16px;
+}
+.right-cont {
+margin: 0;
+display: flex;
+flex: 1;
+flex-wrap: wrap;
+padding: 48px;
+gap: 35PX;
+ align-items: flex-start;
+ justify-content: flex-start;
+}
+a {
+  font-size: 24px;
+  color: white;
+  text-decoration: none;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+li{
+  list-style: none;
+  padding-bottom: 16px;
+  
 }
